k8s/text-ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-ai
spec:
  selector:
    app: text-ai
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
